src/objects/Google_Waived_Error__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments section to provide context for the Waived Error</description>
        <inlineHelpText>Comments section to provide context for the Waived Error</inlineHelpText>
        <label>Comments</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Failure__c</fullName>
        <label>Reasons for Failure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Name__c</fullName>
        <label>Test_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Suite__c</fullName>
        <label>Test Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Versions_available__c</fullName>
        <label>Versions available</label>
        <picklist>
            <picklistValues>
                <fullName>Android 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 6.0</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waived?</label>
        <type>Checkbox</type>
    </fields>
    <label>Google Waived Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Test_Suite__c</columns>
        <columns>Versions_available__c</columns>
        <columns>Waived__c</columns>
        <columns>Reasons_for_Failure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Google Waived Errors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Waived Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>